Links to individual section for each course.

--- a/oers/moocap-oers.html
+++ b/oers/moocap-oers.html
@@ -60,7 +60,21 @@
     <p>This document lists the Open Educational Resources (<abbr>OERs</abbr>)
       that were created for the online courses developed by
       the <a href="http://gpii.eu/moocap/"><abbr>MOOC</abbr> Accessibility Partnership (<abbr>MOOCAP</abbr>)</a>.
+      Below is the list of courses:
     </p>
+    <ul>
+      <li><a href="#introcourse">Digital Accessibility (Introductory Course)</a></li>
+      <li><a href="#learning-teaching">Inclusive Learning and Teaching</a> (University of Southampton)</li>
+      <li><a href="#intellectual-disability">Intellectual Disability and Inclusion</a> (<abbr title="Dublin Institute of Technology">DIT</abbr>)</li>
+      <li><a href="#accesible-documents">Accessible Documents</a> (<abbr title="Technical University Dresden">TUD</abbr>)</li>
+      <li><a href="#ucd-for-access">User-Centered Design for Accessibility</a> (<abbr>HiAO</abbr>)</li>
+      <li><a href="#accessible-gamification">Accessible Gamification</a> (<abbr lang="de" title="Hochschule der Medien">HdM</abbr>)</li>
+      <li><a href="#assistive-technologies">Assistive Technologies</a> (<abbr lang="de" title="Johannes Kepler Universität Linz">JKU</abbr> &amp; <abbr lang="fr" title="Université Paris 8 Vincennes Saint-Denis">UP8</abbr>)</li>
+      <li><a href="#mobile-apps">Accessible Mobile Apps</a> (<abbr lang="de" title="Johannes Kepler Universität Linz">JKU</abbr> &amp; <abbr lang="fr" title="Université Paris 8 Vincennes Saint-Denis">UP8</abbr>)</li>
+      <li><a href="#accessible-web">Accessible Web</a> (<abbr lang="de" title="Technische Universität Dresden">TUD</abbr> &amp; <abbr lang="de" title="Johannes Kepler Universität Linz">JKU</abbr>)</li>
+      <li><a href="#ui-personalization">User Interface Personalization</a> (<abbr>HdM</abbr>)</li>
+      <li><a href="#design-innovation">Design Innovation: Inclusive Approaches</a> (University of the Aegean)</li>
+    </ul>
 
     <section>
     <h2 id="introcourse">Digital Accessibility (Introductory Course)</h2>
@@ -2037,7 +2051,7 @@
 
 
     <section id="accesible-documents">
-      <h2>Accessible Documents (<abbr>TUD</abbr>)</h2>
+      <h2>Accessible Documents (<abbr title="Technical University Dresden">TUD</abbr>)</h2>
       <p>The course &ldquo;Accessible Documents&rdquo; was created by the <span lang="de">Technische Universität Dresden</span> (<abbr>TUD</abbr>).
         See also the <a href="http://gpii.eu/moocap/?p=757">course description</a>.
         All content from the course is stored as a set of
@@ -2382,7 +2396,7 @@
 
 
     <section id="accessible-gamification">
-      <h2>Accessible Gamification (<abbr>HDM</abbr>)</h2>
+      <h2>Accessible Gamification (<abbr>HdM</abbr>)</h2>
       <p>The course &ldquo;Accessible Gamification&rdquo; was created by the <span lang="de">Hochschule der Medien</span>&nbsp;/
         Stuttgart Media University.
         See the <a href="http://gpii.eu/moocap/?p=777">course description</a>.
@@ -2451,7 +2465,7 @@
 
 
     <section id="assistive-technologies">
-      <h2>Assistive Technologies (<abbr>UP8</abbr>+<abbr>JKU</abbr>)</h2>
+      <h2>Assistive Technologies (<abbr lang="de" title="Johannes Kepler Universität Linz">JKU</abbr> &amp; <abbr lang="fr" title="Université Paris 8 Vincennes Saint-Denis">UP8</abbr>)</h2>
       <p>The course <a href="http://gpii.eu/moocap/?p=771">Assistive Technologies</a>
         was created by the <span lang="de">Johannes Kepler Universität Linz</span> (<abbr>JKU</abbr>)
         and the <span lang="fr">Université Paris 8 Vincennes Saint-Denis</span>.
@@ -2659,7 +2673,7 @@
     </section>
 
     <section id="mobile-apps">
-      <h2>Accessible Mobile Apps (<abbr>JKU</abbr>+<abbr>UP8</abbr>)</h2>
+      <h2>Accessible Mobile Apps (<abbr lang="de" title="Johannes Kepler Universität Linz">JKU</abbr> &amp; <abbr lang="fr" title="Université Paris 8 Vincennes Saint-Denis">UP8</abbr>)</h2>
       <p>The course <a href="http://gpii.eu/moocap/?p=767">Accessible Mobile Apps</a>
         was created by the <span lang="de">Johannes Kepler Universität Linz</span> (<abbr>JKU</abbr>)
         and the <span lang="fr">Université Paris 8 Vincennes Saint-Denis</span>.
@@ -2795,7 +2809,7 @@
     </section>
 
     <section id="accessible-web">
-      <h2>Accessible Web (<abbr>TUD</abbr>+<abbr>JKU</abbr>)</h2>
+      <h2>Accessible Web (<abbr lang="de" title="Technische Universität Dresden">TUD</abbr> &amp; <abbr lang="de" title="Johannes Kepler Universität Linz">JKU</abbr>)</h2>
       <p>The course <a href="http://gpii.eu/moocap/?p=753">Accessible Web</a>
         was created by the <span lang="de">Technische Universität Dresden</span> (<abbr>TUD</abbr>)
         and the <span lang="de">Johannes Kepler Universität Linz</span> (<abbr>JKU</abbr>).
@@ -3053,7 +3067,7 @@
 
 
     <section id="ui-personalization">
-      <h2>User Interface Personalization (<abbr>HDM</abbr>)</h2>
+      <h2>User Interface Personalization (<abbr>HdM</abbr>)</h2>
       <p>The course &ldquo;User Interface Personalization&rdquo; was created by the <span lang="de">Hochschule der Medien</span>&nbsp;/
         Stuttgart Media University.
         See the <a href="http://gpii.eu/moocap/?p=762">course description</a>.
