Prof. Certificate in Web Accessibility.

--- a/courses.html
+++ b/courses.html
@@ -100,6 +100,10 @@
 
     <h3>Web Accessibility</h3>
     <ul>
+      <li><a href="http://centreforinclusivedesign.org/professional-certificate-web-accessibility/">Professional Certificate in Web Accessibility</a>
+        is a six-week course by the Centre for Inclusive Design (Australia). The course will run from 26 March to 4 May 2018
+        and costs <abbr title="Australian dollar">AUD</abbr> $2,400.
+      </li>
       <li>
         <a href="https://www.edx.org/course/introduction-web-accessibility-microsoft-dev240x">Introduction to Web Accessibility</a>
         by Microsoft is a self-paced course hosted on edX.
