Atherton: If you care at all about inequality ...

--- a/miscellaneous-links.html
+++ b/miscellaneous-links.html
@@ -78,8 +78,13 @@
         <a href="https://www.24a11y.com/2017/accessibility-first/">Accessibility First: Rethinking the Way We Approach Website Design and Development</a>,
         <i class="website">24 Accessibility</i>, 01.12.2017.
       </li>
+      <li>Atherton, Chris:
+        <a href="https://uxdesign.cc/if-you-care-at-all-about-inequality-you-also-have-to-care-about-web-accessibility-ed2e76dd30fe">If you care at all about inequality, you also have to care about web accessibility</a>,
+        <i class="blog"><abbr>UX</abbr> Collective on Medium</i>, 02.01.2018.
+      </li>
     </ul>
 
+    <!--@@move h3 sections below to new page: web accessibility techniques!-->
     <h3>Support in Assistive Technolgies</h3>
     <ul>
       <li>Faulkner, Steve:
