Sutton: Radically Accessible Internet Applications.

--- a/miscellaneous-links.html
+++ b/miscellaneous-links.html
@@ -210,6 +210,12 @@
         <a href="http://www.allanbeattie.co.uk/blog/inclusive-modals/">Making an Inclusive Progressively-Enhanced Feedback Form in a Modal Dialog</a>,
         <i class="blog">Allan Beattie's blog</i>, 10.12.2017.
       </li>
+      <li>Sutton, Marcy:
+        <a href="https://vimeo.com/album/4935147/video/251520898">Radically Accessible Internet Applications</a>,
+        48-minute presentation at the
+        <a href="https://beyondtellerrand.com/events/munich-2018/speakers">Beyond Tellerand conference</a>,
+        Munich, 15–17 January 2018.
+      </li>
     </ul>
 
     <h3>Scalable Vector Graphics (<abbr>SVG</abbr>)</h3>
