Sethfors: Practical Examples of ...

--- a/miscellaneous-links.html
+++ b/miscellaneous-links.html
@@ -82,6 +82,10 @@
         <a href="https://uxdesign.cc/if-you-care-at-all-about-inequality-you-also-have-to-care-about-web-accessibility-ed2e76dd30fe">If you care at all about inequality, you also have to care about web accessibility</a>,
         <i class="blog"><abbr>UX</abbr> Collective on Medium</i>, 02.01.2018.
       </li>
+      <li>Sethfors, Hampus:
+        <a href="https://axesslab.com/practical-accessibility-improvements/">Practical Examples of Accessibility Improvements</a>,
+        <i class="website">Axess Lab</i>, 28.12.2017.
+      </li>
     </ul>
 
     <!--@@move h3 sections below to new page: web accessibility techniques!-->
