Nav: Web Accessibility Techniques

--- a/WebAccessibilityTools.html
+++ b/WebAccessibilityTools.html
@@ -23,6 +23,7 @@
       <li><a href="designforall.html">Design for All</a></li>
       <li><a href="personas.html">Personas</a></li>
       <li><a href="WebAppAccessibilityResources.html">Web Applications</a></li>
+      <li><a href="webaccessibilitytechniques.html">Web Accessibility Techniques</a></li>
       <li class="active"><a href="WebAccessibilityTools.html">Web Accessibility Tools</a></li>
       <li><a href="elearning.html">Accessibility in e-Learning</a></li>
       <li><a href="contentmanagement.html">Content Management Systems</a></li>
