--- a/404.html
+++ b/404.html
@@ -37,6 +37,7 @@ permalink: /404.html
       <li>Web:
         <ul>
           <li><a href="WebAppAccessibilityResources.html">Web Application Accessibility Resources</a></li>
+          <li><a href="webaccessibilitytechniques.html">Web Accessibility Techniques</a></li>
           <li><a href="WebAccessibilityTools.html">Web Accessibility Tools</a></li>
           <li><a href="elearning.html">Accessibility in e-Learning</a></li>
           <li><a href="contentmanagement.html">Content Management Systems (<abbr>CMS</abbr>)</a></li>
