--- a/WebAppAccessibilityResources.html
+++ b/WebAppAccessibilityResources.html
@@ -22,6 +22,7 @@
       <li><a href="courses.html">Courses</a></li>
       <li><a href="personas.html">Personas</a></li>
       <li class="active"><a href="WebAppAccessibilityResources.html">Web Applications</a></li>
+      <li><a href="webaccessibilitytechniques.html">Web Accessibility Techniques</a></li>
       <li><a href="WebAccessibilityTools.html">Web Accessibility Tools</a></li>
       <li><a href="elearning.html">Accessibility in e-Learning</a></li>
       <li><a href="contentmanagement.html">Content Management Systems</a></li>
