--- a/index.html
+++ b/index.html
@@ -23,6 +23,8 @@
     <ul>
       <li><a href="WebAppAccessibilityResources.html">Web Application Accessibility Resources</a>.
       </li>
+      <li><a href="webaccessibilitytechniques.html">Web Accessibility Techniques</a>.
+      </li>
       <li><a href="WebAccessibilityTools.html">Web Accessibility Tools</a>.
       </li>
       <li><a href="elearning.html">Accessibility in e-Learning</a>.
