--- a/webaccessibilitytechniques.html
+++ b/webaccessibilitytechniques.html
@@ -23,6 +23,7 @@
       <li><a href="designforall.html">Design for All</a></li>
       <li><a href="personas.html">Personas</a></li>
       <li><a href="WebAppAccessibilityResources.html">Web Applications</a></li>
+      <li class="active"><a href="webaccessibilitytechniques.html">Web Accessibility Techniques</a></li>
       <li><a href="WebAccessibilityTools.html">Web Accessibility Tools</a></li>
       <li><a href="elearning.html">Accessibility in e-Learning</a></li>
       <li><a href="contentmanagement.html">Content Management Systems</a></li>
@@ -38,7 +39,7 @@
 
       <li><a href="accessibilityforusers.html">Accessibility for Computer Users</a></li>
       <li><a href="terminology.html">Terminology</a></li>
-      <li class="active"><a href="miscellaneous-links.html">Miscellaneous Links</a></li>
+      <li><a href="miscellaneous-links.html">Miscellaneous Links</a></li>
     </ul>
   </nav>
 
