--- a/miscellaneous-links.html
+++ b/miscellaneous-links.html
@@ -539,6 +539,10 @@
         <a href="https://www.deque.com/blog/ways-artificial-intelligence-face-web-accessibility/">Five Ways in Which Artificial Intelligence Changes the Face of Web Accessibility</a>,
         <i class="blog">The Deque Blog</i>, 16.01.2018.
       </li>
+      <li>Campbell, Bo:
+        <a href="https://uxdesign.cc/tips-for-accessibility-in-conversational-interfaces-8e11c58b31f6">Tips for Designing Accessibility in Voice User Interfaces</a>,
+        <i class="blog"><abbr>UX</abbr> Design Collective on Medium</i>, 02.11.2017.
+      </li>
       <li>Gifford, Mike:
         <a href="https://github.com/mgifford/a11y-lists-of-lists/blob/master/README.md">Accessibility Lists of lists</a>.
       </li>
