Collinson: Ace by DAISY

--- a/contentaccessibility.html
+++ b/contentaccessibility.html
@@ -412,6 +412,14 @@
       <a href="http://cstrobbe.github.io/languagelearning/misc/frequency-lists.html">Frequency Lists and Corpora</a>.
     </p>
 
+    <h2>E-Books and Audio Books</h2>
+    <ul>
+      <li>Collinson, Simon:
+        <a href="https://inclusivepublishing.org/blog/ace-daisy-essential-tool-ebook-developers-workbelt/">Ace by <abbr>DAISY</abbr>: An Essential Tool for the ebook Developer’s Workbelt</a>,
+        <i class="blog">Inclusive Publishing blog</i>, 29.01.2018.
+      </li>
+    </ul>
+
     <h2>Other Links</h2>
     <ul>
       <li>Aron, Jacob:
