--- a/WebAppAccessibilityResources.html
+++ b/WebAppAccessibilityResources.html
@@ -130,6 +130,12 @@
 
     <h2>Other Useful Resources</h2>
     <ul>
+      <li>Whatsock:
+        <a href="http://whatsock.com/tsg/">AccDC Technical Style Guide</a>:
+        <q>designed to provide reliable and consistent interaction designs that are accessible to the highest percentage of people possible, and to establish a baseline for Functional Accessibility that can be utilized, built upon, studied, and tested against.</q>
+        <br />See also
+        <a href="http://whatsock.com/training/">The Accessibility Tree: A Training Guide for Advanced Web Development</a>.
+      </li>
       <li>Heydon Pickering:
         <a class="booktitle" href="https://store.kobobooks.com/en-US/ebook/apps-for-all-coding-accessible-web-applications">Apps For All: Coding Accessible Web Applications</a>,
         e-book published by Kobo (2014).
