Sims: WCAG 2.1 - Low vision success criteria

--- a/accessibilityguidelines.html
+++ b/accessibilityguidelines.html
@@ -127,6 +127,10 @@
             <i class="blog">Myplanet</i>, 10.10.2017.
             <!--@@PDF-->
           </li>
+          <li>Sims, Glenda:
+            <a href="https://www.deque.com/blog/wcag-2-1-vision-success-criteria/">Understanding <abbr>WCAG</abbr> 2.1 – Reviewing Low Vision Success Criteria</a>,
+            <i class="blog">The Deque Blog</i>, 14.12.2017.
+          </li>
         </ul>
       </li>
       <li><abbr>W3C</abbr>:
