--- a/contentaccessibility.html
+++ b/contentaccessibility.html
@@ -414,6 +414,9 @@
 
     <h2>E-Books and Audio Books</h2>
     <ul>
+      <li><a href="https://daisy.github.io/ace/">Ace, by <abbr>DAISY</abbr></a>:
+        an open-source accessibility checker for <abbr>EPUB</abbr>.
+      </li>
       <li>Collinson, Simon:
         <a href="https://inclusivepublishing.org/blog/ace-daisy-essential-tool-ebook-developers-workbelt/">Ace by <abbr>DAISY</abbr>: An Essential Tool for the ebook Developer’s Workbelt</a>,
         <i class="blog">Inclusive Publishing blog</i>, 29.01.2018.
