Ageing: Sinha, AAA, Smiley

--- a/miscellaneous-links.html
+++ b/miscellaneous-links.html
@@ -218,6 +218,20 @@
         <a href="https://www.england.nhs.uk/blog/reframing-ageing/">Reframing ageing</a>,
         <i class="blog"><abbr>NHS</abbr> England Blog</i>, 08.12.2017.
       </li>
+      <li>Sinha, Samir:
+        <a href="https://www.youtube.com/watch?v=NLBXz3_MehU">Building age-friendly communities</a>,
+        presentation at <a href="http://www.tedxstouffville.com/speakers.php">TEDxStouffville</a> 2014
+        (YouTube, 14 minutes, July 2014).
+      </li>
+      <li>Agile Ageing Alliance:
+        <a href="https://www.agileageing.org/site_files/5944/upload_files/NeighbourhoodsoftheFuture11.pdf">Neighbourhoods of the Future – Better Homes for Older Adults – Improving Health, Care, Design and Technology</a>
+        (<abbr>PDF</abbr>, 2017).
+      </li>
+      <li>Smiley, Lauren:
+        <a href="https://www.wired.com/story/digital-puppy-seniors-nursing-homes/">What Happens When We Let Tech Care For Our Aging Parents</a>,
+        <i class="website">Wired</i>, 19.12.2017.
+        <!--Example of Externalisierung: care is outsourced to people outside the US, with lower wages.-->
+      </li>
     </ul>
 
     <h2>Legislation, Policy, Lawsuits, &hellip;</h2>
