--- a/miscellaneous-links.html
+++ b/miscellaneous-links.html
@@ -312,6 +312,10 @@
         <a href="https://www.telesurtv.net/news/Evo-Morales-decreta-ley-que-protege-a-personas-con-discapacidad-20170926-0030.html" hreflang="es" lang="es">Evo Morales decreta ley que protege a personas con discapacidad</a>,
         <i class="website">telesur</i>, 26.09.2017.
       </li>
+      <li>Feingold, Lainey:
+        <a href="https://www.24a11y.com/2017/shifting-fear-motivation-talking-digital-accessibility-law/">Shifting from Fear to Motivation when Talking about Digital Accessibility Law</a>,
+        <i class="website">24 Accessibility</i>, 11.12.2017.
+      </li>
     </ul>
 
     <h2>Accessibility in the Physical World</h2>
