Fei Ren: What my color-blindness taught me ...

--- a/miscellaneous-links.html
+++ b/miscellaneous-links.html
@@ -177,6 +177,10 @@
         <a href="https://medium.com/@wojtekkutyla/heydon-pickering-accessibility-responsibility-and-inclusive-design-6fd8ae9883b8">Heydon Pickering — accessibility, responsibility and inclusive design</a>,
         <i class="blog">Wojtek Kytula on Medium</i>, 13.12.2017.
       </li>
+      <li>Ren, Fei:
+        <a href="https://uxdesign.cc/what-my-color-blindness-taught-me-about-design-d3009a93ff9c">What my color-blindness taught me about design</a>,
+        <i class="blog"><abbr>UX</abbr> Collective on Medium</i>, 23.01.2018.
+      </li>
       <li>Ontario (Canada):
         <a href="https://www.ontario.ca/page/inclusive-design-toolkit">Inclusive design toolkit</a>.
       </li>
