Ravenhall: Voice assistants

--- a/miscellaneous-links.html
+++ b/miscellaneous-links.html
@@ -572,6 +572,10 @@
         <a href="https://uxdesign.cc/tips-for-accessibility-in-conversational-interfaces-8e11c58b31f6">Tips for Designing Accessibility in Voice User Interfaces</a>,
         <i class="blog"><abbr>UX</abbr> Design Collective on Medium</i>, 02.11.2017.
       </li>
+      <li>Ravenhall, Allison:
+        <a href="http://intopia.digital/articles/voice-assistants-only-accessible-for-some/">Voice assistants: Accessible for some, not everyone</a>,
+        <i class="website">Intopia</i>, 01.01.2018.
+      </li>
       <li>Gifford, Mike:
         <a href="https://github.com/mgifford/a11y-lists-of-lists/blob/master/README.md">Accessibility Lists of lists</a>.
       </li>
