UIO+ extension for Chrome

--- a/accessibilityforusers.html
+++ b/accessibilityforusers.html
@@ -117,6 +117,10 @@
       <li><a href="http://chronic-illness-support.tumblr.com/post/121510449113/chrome-extensions-for-disabilities-masterpost">chrome extensions for disabilities masterpost</a>
         (June 2015): a list of extensions for people with reading disabilities.
       </li>
+      <li><a href="https://chrome.google.com/webstore/detail/ui-options-plus-uio%2B/okenndailhmikjjfcnmolpaefecbpaek"><abbr>UI</abbr> Options Plus (<abbr>UIO</abbr>+)</a>
+        is an extension for Chrome developed by the <a href="https://fluidproject.org/">Fluid Project</a>.
+        It allows people to customize websites by tweaking text size, line spacing, contrast and other features. 
+      </li>
     </ul>
 
 
