Incobs: Das Schicksal von Target Size (WCAG 2.1).

--- a/accessibilityguidelines.html
+++ b/accessibilityguidelines.html
@@ -131,6 +131,10 @@
             <a href="https://www.deque.com/blog/wcag-2-1-vision-success-criteria/">Understanding <abbr>WCAG</abbr> 2.1 – Reviewing Low Vision Success Criteria</a>,
             <i class="blog">The Deque Blog</i>, 14.12.2017.
           </li>
+          <li><a href="http://www.incobs.de/artikel/items/target-size.html" hreflang="de" lang="de">Das Schicksal von "<span lang="en">Target Size</span>"</a>,
+            <i class="website">Incobs</i>, 01.02.2018.
+            <!--Example of an issue that requires personalization instead of "one size fits all"!-->
+          </li>
         </ul>
       </li>
       <li><abbr>W3C</abbr>:
