Microsoft: Office accessibility checker

--- a/contentaccessibility.html
+++ b/contentaccessibility.html
@@ -92,6 +92,11 @@
         <a href="https://support.office.com/en-us/article/Accessibility-support-for-Visio-7ac46c50-02c2-44ab-aa1c-711482099276">Accessibility support for Visio</a>:
         covers Visio 2016.
       </li>
+      <li>Microsoft:
+        <a href="https://support.office.com/en-us/article/use-the-accessibility-checker-on-your-windows-desktop-to-find-accessibility-issues-a16f6de0-2f39-4a2b-8bd8-5ad801426c7f">Use the Accessibility Checker on your Windows desktop to find accessibility issues</a>
+        &amp; 
+        <a href="https://support.office.com/en-us/article/use-the-accessibility-checker-on-your-mac-to-find-and-resolve-accessibility-issues-3b84295e-d55b-49f1-b443-523ec45a5232">Use the Accessibility Checker on your Mac to find and resolve accessibility issues</a>.
+      </li>
     </ul>
 
     <h3 id="pdf">Portable Document Format (<abbr>PDF</abbr>)</h3>
@@ -414,7 +419,7 @@
 
     <h2>E-Books and Audio Books</h2>
     <ul>
-      <li><a href="https://daisy.github.io/ace/">Ace, by <abbr>DAISY</abbr></a>:
+      <li><a href="https://daisy.github.io/ace/"><abbr title="Accessibility Checker for ePub">Ace</abbr>, by <abbr>DAISY</abbr></a>:
         an open-source accessibility checker for <abbr>EPUB</abbr>.
       </li>
       <li>Collinson, Simon:
