Atalan: AcceDe Web.

--- a/miscellaneous-links.html
+++ b/miscellaneous-links.html
@@ -62,6 +62,9 @@
         <a href="https://www.uxpin.com/studio/blog/8-website-accessibility-best-practices-to-improve-ux/">8 Website Accessibility Best Practices to Improve <abbr>UX</abbr></a>,
         <i class="blog"><abbr>UX</abbr>Pin blog</i>, 02.03.2016 (updated 23.06.2016).
       </li>
+      <li><a href="https://www.accede-web.com/" hreflang="fr" lang="fr">AcceDe Web | La démarche accessibilité</a>,
+        website by the French company <i class="website">Atalan</i>.
+      </li>
       <li>Aizpurua, Amaia; Harper, Simon; Vigo, Markel: 
         <a href="http://www.sciencedirect.com/science/article/pii/S1071581916000409">Exploring the Relationship between Web Accessibility and User Experience</a>.
         <i class="journal">International Journal of Human-Computer Studies</i>, Volume 91 (July 2016): 13–23.
