--- a/contentaccessibility.html
+++ b/contentaccessibility.html
@@ -433,6 +433,10 @@
       <li><a href="https://www.edrlab.org/epub/">What is <abbr>EPUB</abbr>?</a>,
         <i class="website"><abbr>EDR</abbr>Lab</i> (no date).
       </li>
+      <li>Dobson, Victoria; McNaught, Alistair:
+        <a href="https://insights.uksg.org/articles/10.1629/uksg.358/">Crowdsourcing e-book accessibility information and the impact on staff development</a>,
+        <i class="journal"><abbr>UKSG</abbr> Insights</i>, 30.2 (2017): pages 61–70. <abbr>DOI</abbr>: <a href="http://doi.org/10.1629/uksg.358">http://doi.org/10.1629/uksg.358</a>. 
+      </li>
     </ul>
 
     <h2>Other Links</h2>
