--- a/miscellaneous-links.html
+++ b/miscellaneous-links.html
@@ -359,6 +359,10 @@
       <li><a href="http://www.bmmagazine.co.uk/in-business/5-ways-make-workplace-disability-friendly/">5 ways to make your workplace disability friendly</a>,
         <i class="website">Business Matters</i>, 21.01.2018.
       </li>
+      <li>Vanderhyde, Michael:
+        <a href="https://www.microsoft.com/itshowcase/blog/quest-make-microsoft-accessible-core/">The quest to make Microsoft accessible to its core</a>,
+        <i class="blog">Microsoft <abbr>IT</abbr> Showcase blog</i>, 17.01.2018.
+      </li>
     </ul>
 
     <h2>Accessibility in Education</h2>
