WHO: Age-friendly environments in Europe

--- a/miscellaneous-links.html
+++ b/miscellaneous-links.html
@@ -363,6 +363,13 @@
         <a href="https://www.microsoft.com/itshowcase/blog/quest-make-microsoft-accessible-core/">The quest to make Microsoft accessible to its core</a>,
         <i class="blog">Microsoft <abbr>IT</abbr> Showcase blog</i>, 17.01.2018.
       </li>
+      <li>World Health Organization (<abbr>WHO</abbr>):
+        <a href="http://www.euro.who.int/en/publications/abstracts/age-friendly-environments-in-europe.-a-handbook-of-domains-for-policy-action-2017">Age-friendly environments in Europe. A handbook of domains for policy action (2017)</a>.
+        According to the <abbr>WHO's</abbr> description,
+        <q>This handbook is based on lessons learned from existing age-friendly initiatives in Europe. It thus builds on the richness of relevant locally and regionally developed tools that are now available, as well as the latest evidence from research. This publication links actions to create more age-friendly environments to the broader context of European health and social policies for ageing populations.</q>
+        See also the article <a href="http://www.agefriendlyeurope.org/news/new-who-handbook-age-friendly-environments">New WHO handbook on age-friendly environments</a>
+        by the Covenant on Demographic Change (16.01.2018).
+      </li>
     </ul>
 
     <h2>Accessibility in Education</h2>
