--- a/miscellaneous-links.html
+++ b/miscellaneous-links.html
@@ -335,6 +335,10 @@
         <a href="https://www.levelaccess.com/whats-new-section-508-refresh/">What&#039;s New in the Section 508 Refresh?</a>
         <i class="website">Level Access</i>, 31.01.2018.
       </li>
+      <li><a href="https://www.levelaccess.com/resources/section-508-refresh-whitepaper/">Section 508 Refresh: Understanding the New Requirements</a>,
+        white paper, <i class="website">Level Access</i> (no date).
+        <!--@@download-->
+      </li>
     </ul>
 
     <h2>Accessibility in the Physical World</h2>
