Heineman: 2018 Digital Accessibility Trends

--- a/miscellaneous-links.html
+++ b/miscellaneous-links.html
@@ -606,6 +606,10 @@
         <a href="http://intopia.digital/articles/voice-assistants-only-accessible-for-some/">Voice assistants: Accessible for some, not everyone</a>,
         <i class="website">Intopia</i>, 01.01.2018.
       </li>
+      <li>Heineman, Kristin:
+        <a href="https://www.levelaccess.com/2018-digital-accessibility-trends-qa-webinar-resources/">2018 Digital Accessibility Trends Q&amp;A and Webinar Resources</a>,
+        <i class="website">Level Access</i>, 01.02.2018.
+      </li>
       <li>Gifford, Mike:
         <a href="https://github.com/mgifford/a11y-lists-of-lists/blob/master/README.md">Accessibility Lists of lists</a>.
       </li>
