Paciello Group: Date and Date Range Pickers

--- a/WebAppAccessibilityResources.html
+++ b/WebAppAccessibilityResources.html
@@ -145,6 +145,9 @@
       <li>Heydon: 
         <a href="http://heydonworks.com/practical_aria_examples/"><abbr>ARIA</abbr> Examples</a>.
       </li>
+      <li>Paciello Group:
+        <a href="http://files.paciellogroup.com/customers/WF/COOKBOOK2/rolestate/date-range-pickers/index.html">Date and Date Range Pickers</a>.
+      </li>
     </ul>
 
     <h3><abbr>CAST</abbr> Figuration</h3>
