Agrawal: What Technology is Covered by Section 508

--- a/miscellaneous-links.html
+++ b/miscellaneous-links.html
@@ -339,6 +339,10 @@
         white paper, <i class="website">Level Access</i> (no date).
         <!--@@download-->
       </li>
+      <li>Agrawal, Rishi:
+        <a href="https://www.levelaccess.com/technology-covered-section-508-refresh/">What Technology is Covered by Section 508 after the Refresh?</a>,
+        <i class="website">Level Access</i>, 07.02.2018.
+      </li>
     </ul>
 
     <h2>Accessibility in the Physical World</h2>
