Syncfusion: Essential JS 2 for Angular

--- a/WebAppAccessibilityResources.html
+++ b/WebAppAccessibilityResources.html
@@ -148,6 +148,11 @@
       <li>Paciello Group:
         <a href="http://files.paciellogroup.com/customers/WF/COOKBOOK2/rolestate/date-range-pickers/index.html">Date and Date Range Pickers</a>.
       </li>
+      <li>Syncfusion:
+        <a href="http://ej2.syncfusion.com/15.4.17/angular/documentation/index.html">Essential JS 2 for Angular</a>:
+        <q>a collection modern TypeScript based true Angular Components</q>.
+        The documentation has a section on <a href="http://ej2.syncfusion.com/15.4.17/angular/documentation/base/accessibility.html">Accessibility</a>.
+      </li>
     </ul>
 
     <h3><abbr>CAST</abbr> Figuration</h3>
