Atalan: Ressources au sujet de l'accessibilité num...

--- a/miscellaneous-links.html
+++ b/miscellaneous-links.html
@@ -625,6 +625,9 @@
       <li>Gifford, Mike:
         <a href="https://github.com/mgifford/a11y-lists-of-lists/blob/master/README.md">Accessibility Lists of lists</a>.
       </li>
+      <li>Atalan:
+        <a href="https://github.com/atalan/a11y-resources/blob/master/list-of-a11y-resources.md">Digital accessibility resources / <span lang="fr">Ressources au sujet de l'accessibilité numérique</span></a>.
+      </li>
       <!--
       <li>
         <a href=""></a>
