Freedom Scientific: VFO-standards-support

--- a/webaccessibilitytechniques.html
+++ b/webaccessibilitytechniques.html
@@ -126,6 +126,10 @@
         <a href="https://www.powermapper.com/tests/">Assistive technology compatibility tests</a>:
         test results for compatibility with screen readers such as <abbr>NVDA</abbr>, Jaws and VoiceOver.
       </li>
+      <li>Freedom Scientific:
+        <a href="https://github.com/FreedomScientific/VFO-standards-support/issues"><abbr>VFO</abbr>-standards-support</a>:
+        issue tracker for Jaws.
+      </li>
     </ul>
 
     <h2>Page Structure</h2>
