--- a/miscellaneous-links.html
+++ b/miscellaneous-links.html
@@ -628,6 +628,10 @@
       <li>Atalan:
         <a href="https://github.com/atalan/a11y-resources/blob/master/list-of-a11y-resources.md">Digital accessibility resources / <span lang="fr">Ressources au sujet de l'accessibilité numérique</span></a>.
       </li>
+      <li>
+        <a href="https://ds.gpii.net/"><abbr>GPII</abbr> DeveloperSpace</a>:
+        a <q>one-stop place to find resources, components and people to conceive, develop, test and market novel accessible solutions</q>.
+      </li>
       <!--
       <li>
         <a href=""></a>
