Watson: Using the aria-current attribute

--- a/webaccessibilitytechniques.html
+++ b/webaccessibilitytechniques.html
@@ -167,6 +167,14 @@
         <a href="https://www.filamentgroup.com/lab/a11y-links.html">Accessible Links Re:visited</a>,
         <i class="website">Filament Group</i>, 06.12.2017.
       </li>
+      <li>Watson, Léonie:
+        <a href="https://tink.uk/using-the-aria-current-attribute/">Using the <code>aria-current</code> attribute</a>,
+        <i class="website">Tink</i>, 14.01.2017.
+        About the <a href="https://www.w3.org/TR/wai-aria-1.1/#aria-current"><code>aria-current</code> attribute</a>, 
+        which was included in the <abbr>WAI</abbr>-<abbr>ARIA</abbr> 1.1 specification (14.12.2017). See also the
+        <a href="http://design-patterns.tink.uk/aria-current/"><code>aria-current</code> design patterns</a>
+        on the same website.
+      </li>
     </ul>
 
     <h2>Form Accessibility</h2>
