--- a/GameAccessibilityResources.html
+++ b/GameAccessibilityResources.html
@@ -32,7 +32,7 @@
       <li><a href="GUIAccessibilityResources.html"><abbr>GUI</abbr> Toolkit Accessibility</a></li>
       <li><a href="accessibilityguidelines.html">Accessibility Guidelines </a></li>
       <li><a href="contentaccessibility.html">Content Accessibility</a></li>
-      <li class="active"><a href="GameAccessibilityResources.html">Game Accessibility</a></li>
+      <li class="active"><a aria-current="page" href="GameAccessibilityResources.html">Game Accessibility</a></li>
       <li><a href="crowdsourcing.html" title="Crowdsourcing &amp; Human-Based Computation">Crowdsourcing</a></li>
       <li><a href="assistivetechnology.html">Assistive Technology</a></li>
       <li><a href="tts.html"><abbr title="Text-to-speech software">TTS</abbr></a></li>
