--- a/MobileAccessibilityResources.html
+++ b/MobileAccessibilityResources.html
@@ -27,7 +27,7 @@
       <li><a href="WebAccessibilityTools.html">Web Accessibility Tools</a></li>
       <li><a href="elearning.html">Accessibility in e-Learning</a></li>
       <li><a href="contentmanagement.html">Content Management Systems</a></li>
-      <li class="active"><a href="MobileAccessibilityResources.html">Mobile Accessibility</a></li>
+      <li class="active"><a aria-current="page" href="MobileAccessibilityResources.html">Mobile Accessibility</a></li>
       <li><a href="LinuxAccessibilityResources.html">Linux Accessibility</a></li>
       <li><a href="GUIAccessibilityResources.html"><abbr>GUI</abbr> Toolkit Accessibility</a></li>
       <li><a href="accessibilityguidelines.html">Accessibility Guidelines </a></li>
