--- a/WebAppAccessibilityResources.html
+++ b/WebAppAccessibilityResources.html
@@ -21,7 +21,7 @@
       <li><a href="index.html">Home</a></li>
       <li><a href="courses.html">Courses</a></li>
       <li><a href="personas.html">Personas</a></li>
-      <li class="active"><a href="WebAppAccessibilityResources.html">Web Applications</a></li>
+      <li class="active"><a aria-current="page" href="WebAppAccessibilityResources.html">Web Applications</a></li>
       <li><a href="webaccessibilitytechniques.html">Web Accessibility Techniques</a></li>
       <li><a href="WebAccessibilityTools.html">Web Accessibility Tools</a></li>
       <li><a href="elearning.html">Accessibility in e-Learning</a></li>
