--- a/assistivetechnology.html
+++ b/assistivetechnology.html
@@ -34,7 +34,7 @@
       <li><a href="contentaccessibility.html">Content Accessibility</a></li>
       <li><a href="GameAccessibilityResources.html">Game Accessibility</a></li>
       <li><a href="crowdsourcing.html" title="Crowdsourcing &amp; Human-Based Computation">Crowdsourcing</a></li>
-      <li class="active"><a href="assistivetechnology.html">Assistive Technology</a></li>
+      <li class="active"><a aria-current="page" href="assistivetechnology.html">Assistive Technology</a></li>
       <li><a href="tts.html"><abbr title="Text-to-speech software">TTS</abbr></a></li>
     </ul>
   </nav>
