--- a/contentmanagement.html
+++ b/contentmanagement.html
@@ -26,7 +26,7 @@
       <li><a href="webaccessibilitytechniques.html">Web Accessibility Techniques</a></li>
       <li><a href="WebAccessibilityTools.html">Web Accessibility Tools</a></li>
       <li><a href="elearning.html">Accessibility in e-Learning</a></li>
-      <li class="active"><a href="contentmanagement.html">Content Management Systems</a></li>
+      <li class="active"><a aria-current="page" href="contentmanagement.html">Content Management Systems</a></li>
       <li><a href="MobileAccessibilityResources.html">Mobile Accessibility</a></li>
       <li><a href="LinuxAccessibilityResources.html">Linux Accessibility</a></li>
       <li><a href="GUIAccessibilityResources.html"><abbr>GUI</abbr> Toolkit Accessibility</a></li>
