--- a/miscellaneous-links.html
+++ b/miscellaneous-links.html
@@ -39,7 +39,7 @@
 
       <li><a href="accessibilityforusers.html">Accessibility for Computer Users</a></li>
       <li><a href="terminology.html">Terminology</a></li>
-      <li class="active"><a href="miscellaneous-links.html">Miscellaneous Links</a></li>
+      <li class="active"><a aria-current="page" href="miscellaneous-links.html">Miscellaneous Links</a></li>
     </ul>
   </nav>
 
