--- a/LinuxAccessibilityResources.html
+++ b/LinuxAccessibilityResources.html
@@ -28,7 +28,7 @@
       <li><a href="elearning.html">Accessibility in e-Learning</a></li>
       <li><a href="contentmanagement.html">Content Management Systems</a></li>
       <li><a href="MobileAccessibilityResources.html">Mobile Accessibility</a></li>
-      <li class="active"><a href="LinuxAccessibilityResources.html">Linux Accessibility</a></li>
+      <li class="active"><a aria-current="page" href="LinuxAccessibilityResources.html">Linux Accessibility</a></li>
       <li><a href="GUIAccessibilityResources.html"><abbr>GUI</abbr> Toolkit Accessibility</a></li>
       <li><a href="accessibilityguidelines.html">Accessibility Guidelines </a></li>
       <li><a href="contentaccessibility.html">Content Accessibility</a></li>
