--- a/accessibilityforusers.html
+++ b/accessibilityforusers.html
@@ -37,7 +37,7 @@
       <li><a href="assistivetechnology.html">Assistive Technology</a></li>
       <li><a href="tts.html"><abbr title="Text-to-speech software">TTS</abbr></a></li>
 
-      <li class="active"><a href="accessibilityforusers.html">Accessibility for Computer Users</a></li>
+      <li class="active"><a aria-current="page" href="accessibilityforusers.html">Accessibility for Computer Users</a></li>
       <li><a href="terminology.html">Terminology</a></li>
     </ul>
   </nav>
