--- a/accessibilityguidelines.html
+++ b/accessibilityguidelines.html
@@ -30,7 +30,7 @@
       <li><a href="MobileAccessibilityResources.html">Mobile Accessibility</a></li>
       <li><a href="LinuxAccessibilityResources.html">Linux Accessibility</a></li>
       <li><a href="GUIAccessibilityResources.html"><abbr>GUI</abbr> Toolkit Accessibility</a></li>
-      <li class="active"><a href="accessibilityguidelines.html">Accessibility Guidelines </a></li>
+      <li class="active"><a aria-current="page" href="accessibilityguidelines.html">Accessibility Guidelines </a></li>
       <li><a href="contentaccessibility.html">Content Accessibility</a></li>
       <li><a href="GameAccessibilityResources.html">Game Accessibility</a></li>
       <li><a href="crowdsourcing.html" title="Crowdsourcing &amp; Human-Based Computation">Crowdsourcing</a></li>
