--- a/contentaccessibility.html
+++ b/contentaccessibility.html
@@ -31,7 +31,7 @@
       <li><a href="LinuxAccessibilityResources.html">Linux Accessibility</a></li>
       <li><a href="GUIAccessibilityResources.html"><abbr>GUI</abbr> Toolkit Accessibility</a></li>
       <li><a href="accessibilityguidelines.html">Accessibility Guidelines </a></li>
-      <li class="active"><a href="contentaccessibility.html">Content Accessibility</a></li>
+      <li class="active"><a aria-current="page" href="contentaccessibility.html">Content Accessibility</a></li>
       <li><a href="GameAccessibilityResources.html">Game Accessibility</a></li>
       <li><a href="crowdsourcing.html" title="Crowdsourcing &amp; Human-Based Computation">Crowdsourcing</a></li>
       <li><a href="assistivetechnology.html">Assistive Technology</a></li>
