--- a/courses.html
+++ b/courses.html
@@ -19,7 +19,7 @@
     <h2>Navigation</h2>
     <ul>
       <li><a href="index.html">Home</a></li>
-      <li class="active"><a href="courses.html">Courses</a></li>
+      <li class="active"><a aria-current="page" href="courses.html">Courses</a></li>
       <li><a href="designforall.html">Design for All</a></li>
       <li><a href="personas.html">Personas</a></li>
       <li><a href="WebAppAccessibilityResources.html">Web Applications</a></li>
