--- a/designforall.html
+++ b/designforall.html
@@ -20,7 +20,7 @@
     <ul>
       <li><a href="index.html">Home</a></li>
       <li><a href="courses.html">Courses</a></li>
-      <li class="active"><a href="designforall.html">Design for All</a></li>
+      <li class="active"><a aria-current="page" href="designforall.html">Design for All</a></li>
       <li><a href="personas.html">Personas</a></li>
       <li><a href="WebAppAccessibilityResources.html">Web Applications</a></li>
       <li><a href="webaccessibilitytechniques.html">Web Accessibility Techniques</a></li>
