--- a/elearning.html
+++ b/elearning.html
@@ -25,7 +25,7 @@
       <li><a href="WebAppAccessibilityResources.html">Web Applications</a></li>
       <li><a href="webaccessibilitytechniques.html">Web Accessibility Techniques</a></li>
       <li><a href="WebAccessibilityTools.html">Web Accessibility Tools</a></li>
-      <li class="active"><a href="elearning.html">Accessibility in e-Learning</a></li>
+      <li class="active"><a aria-current="page" href="elearning.html">Accessibility in e-Learning</a></li>
       <li><a href="contentmanagement.html">Content Management Systems</a></li>
       <li><a href="MobileAccessibilityResources.html">Mobile Accessibility</a></li>
       <li><a href="LinuxAccessibilityResources.html">Linux Accessibility</a></li>
