Pickering: Accessible Current Page Link Conundrum

--- a/webaccessibilitytechniques.html
+++ b/webaccessibilitytechniques.html
@@ -175,6 +175,10 @@
         <a href="http://design-patterns.tink.uk/aria-current/"><code>aria-current</code> design patterns</a>
         on the same website.
       </li>
+      <li>Pickering, Heydon:
+        <a href="http://www.heydonworks.com/article/the-accessible-current-page-link-conundrum">The Accessible Current Page Link Conundrum</a>,
+        <i class="website">HeydonWorks</i>, 14.02.2014.
+      </li>
     </ul>
 
     <h2>Form Accessibility</h2>
