Dam & Siang: Personas – Why and How ...

--- a/personas.html
+++ b/personas.html
@@ -208,6 +208,10 @@
         <a href="https://www.uxpin.com/studio/blog/right-empathy-dissecting-4-personas-real-projects/">The Right Empathy: Dissecting 4 Personas From Real Projects</a>,
         <i class="blog"><abbr>UX</abbr>Pin blog</i>, 19.09.2016.
       </li>
+      <li>Dam, Rikke; Siang, Teo:
+        <a href="https://www.interaction-design.org/literature/article/personas-why-and-how-you-should-use-them">Personas – Why and How You Should Use Them</a>,
+        <i class="website">Interaction Design Foundation</i>, February 2018.
+      </li>
     </ul>
   </main>
 
