--- a/WebAccessibilityTools.html
+++ b/WebAccessibilityTools.html
@@ -160,6 +160,8 @@
         <a href="http://phantomjs.org/">PhantomJS</a>.
         (Licence: <a href="https://github.com/pa11y/pa11y/blob/master/LICENSE"><abbr>GNU</abbr> <abbr title="Lesser General Public License">LGPL</abbr> 3.0</a>.)
       </li>
+      <li><a href="http://hiis.isti.cnr.it:8880/MauveWeb/"><abbr>MAUVE</abbr>: Multiguideline Accessibility and Usability Validation Environment</a>.
+      </li>
       <li>Addy Osmani and Matt Gaunt:
         <a href="https://www.youtube.com/watch?v=pBJZsp5LsOE">Totally Tooling Tips: Accessibility</a>:
         short YouTube video (8 minutes) that introduces a few tools, <abbr>i.e.</abbr> 
