Aalen: It's illegal to have an inaccessible website ...

--- a/miscellaneous-links.html
+++ b/miscellaneous-links.html
@@ -318,6 +318,10 @@
         <a href="https://axesslab.com/web-accessibility-directive/">Web Accessibility Directive – What it is and how to comply</a>,
         <i class="website">Axess Lab</i>, 27.09.2017.
       </li>
+      <li>Aalen, Ida:
+        <a href="https://medium.com/confrere/its-illegal-to-have-an-inaccessible-website-in-norway-and-that-s-good-news-for-all-of-us-b59a9e929d54">It’s illegal to have an inaccessible website in Norway — and that’s good news for all of us</a>,
+        <i class="blog">Confrere on Medium</i>, 17.02.2018.
+      </li>
     </ul>
 
     <h3>Outside the European Union</h3>
