Barclays: Desing for All

--- a/designforall.html
+++ b/designforall.html
@@ -83,6 +83,9 @@
         but it has similar 
         <a href="http://www.transgenerational.org/viewpoint/transgenerational.htm#Benefits">benefits</a>.
       </li>
+      <li>Barclays:
+        <a href="https://www.barclayscorporate.com/insight-and-research/managing-your-business/making-your-business-accessible/inclusive-design.html">Inclusive design</a>.
+      </li>
     </ul>
 
     <h2>Involving Users</h2>
