New date ASD course

--- a/courses.html
+++ b/courses.html
@@ -209,7 +209,7 @@
         The course is aimed at parents, carers and practitions and does not require
         any previous experience of the subject.
         The first run of the course started on 3 April and ended on 30 April 2017.
-        A date for the second run has not been announced yet.
+        The third run starts on 2 April 2018.<!--https://www.futurelearn.com/courses/supporting-autism/3/welcome-->
       </li>
       <li>
         <a href="https://www.futurelearn.com/courses/internet-aging">Internet of Things for Active Aging</a>
