Encyclopedia of HCI: Design for All

--- a/designforall.html
+++ b/designforall.html
@@ -86,6 +86,10 @@
       <li>Barclays:
         <a href="https://www.barclayscorporate.com/insight-and-research/managing-your-business/making-your-business-accessible/inclusive-design.html">Inclusive design</a>.
       </li>
+      <li>
+        <a href="https://www.interaction-design.org/literature/book/the-encyclopedia-of-human-computer-interaction-2nd-ed/design-4-all">Design for All</a>,
+        <i class="booktitle">The Encyclopedia of Human-Computer Interaction, 2nd <abbr>Ed.</abbr></i>.
+      </li>
     </ul>
 
     <h2>Involving Users</h2>
