Aragall & Montana: Universal Design: HUMBLES

--- a/designforall.html
+++ b/designforall.html
@@ -90,6 +90,11 @@
         <a href="https://www.interaction-design.org/literature/book/the-encyclopedia-of-human-computer-interaction-2nd-ed/design-4-all">Design for All</a>,
         <i class="booktitle">The Encyclopedia of Human-Computer Interaction, 2nd <abbr>Ed.</abbr></i>.
       </li>
+      <li>Aragall, Francesc; Montana, Jordi:
+        <i class="booktitle">Universal Design: The HUMBLES Method for User-Centred Business</i>.
+        Routledge, 2012. (256 pages)
+        <a href="https://www.routledge.com/Universal-Design-The-HUMBLES-Method-for-User-Centred-Business/Aragall-Montana/p/book/9780566088650"><abbr>ISBN</abbr>  9780566088650</a>.
+      </li>
     </ul>
 
     <h2>Involving Users</h2>
