--- a/courses.html
+++ b/courses.html
@@ -57,10 +57,11 @@
       <li>
         <a href="https://www.futurelearn.com/courses/digital-accessibility">Digital Accessibility: Enabling Participation in the Information Society</a>
         is a five-week course created by the <a href="http://gpii.eu/moocap/"><abbr>MOOC</abbr> Accessibility Partnership</a> 
-        and that runs on FutureLearn.
+        and that has run three times on FutureLearn.
         The first run of the course started on 17 October 2016 and ended on 20 November 2016. 
         The second run started on 6 February 2017 and ended on 12 March 2017.
         The third run started on 9 October 2017.
+        A new run has not been scheduled at the moment.
         <br />The content on which the course is based is available as a collection of 
         Open Educational Resources (<abbr>OERs</abbr>). You can find the list on the
         <a href="http://gpii.eu/moocap/?p=793"><abbr>MOOCAP</abbr> website</a>
@@ -76,6 +77,7 @@
         The <a href="https://www.fun-mooc.fr/courses/inria/41012/session01/about" lang="fr">first session</a> 
         of the course started on 7 November 2016 and ran for five weeks.
         The second run of the course started on 9 May and ended on 17 June 2017. The course requires 2 to 3 hours of study per week.
+        A new run of the course has not been scheduled at the moment.
         (See also the 
         <a href="http://www.echosciences-grenoble.fr/annonces/mooc-accessibilite-numerique-bientot-disponible-sur-la-plateforme-france-universite-numerique" lang="fr" hreflang="fr">MOOC « Accessibilité Numérique » bientôt disponible sur la plateforme France Université Numérique</a>
         on <span lang="fr">Echosciences Grenoble</span>.)
