edx ms web access, Udacity, Ryerson: Business

--- a/courses.html
+++ b/courses.html
@@ -108,16 +108,19 @@
         and costs <abbr title="Australian dollar">AUD</abbr> $2,400.
       </li>
       <li>
-        <a href="https://www.edx.org/course/introduction-web-accessibility-microsoft-dev240x">Introduction to Web Accessibility</a>
-        by Microsoft is a self-paced course hosted on edX.
-        The course consists of 5 modules, each requiring 3–4 hours of effort.
-        The first run started in 28 July 2017.
-      </li>
-      <li>
         <a href="https://www.edx.org/course/web-design-best-practices-inclusive-microsoft-dev240x">Web Design Best Practices: An Inclusive Approach</a>
         by Microsoft is a self-paced course hosted on edX.
         The course consists of 5 modules, each requiring 3–4 hours of effort.
-        The first run starts on 31 January 2018.
+        The first run started on 31 January 2018.
+        It is part of a &ldquo;Professional Certificate Program&rdquo;. 
+        The next run starts on 1 March 2018.
+      </li>
+      <li>
+        <a href="https://www.edx.org/course/introduction-web-accessibility-microsoft-dev240x">Introduction to Web Accessibility</a>
+        by Microsoft was a self-paced course hosted on edX.
+        The course consisted of 5 modules, each requiring 3–4 hours of effort.
+        The first run started in 28 July 2017. The link to this course now redirects to
+        &ldquo;Web Design Best Practices: An Inclusive Approach&rdquo; (see above).
       </li>
       <!--
       <li>
@@ -132,15 +135,15 @@
       </li>
       --><!--Course has been removed-->
       <li>
+        <a href="https://www.udacity.com/course/web-accessibility--ud891">Web Accessibility</a>
+        is a two-week <abbr>MOOC</abbr> by Google on Udacity. It is listed as an advanced self-paced course.
+      </li>
+      <li>
         <a href="https://www.canvas.net/browse/cccs/courses/web-accessibility-mooc-for-educators-3">Web Accessibility <abbr>MOOC</abbr> for Educators</a>
         is a three-week course by the Colorado Community College System (<abbr>CCCS</abbr>) hosted on Canvas.
         It most recently ran in February–March 2016 and again 
         <a href="https://www.canvas.net/browse/cccs/courses/web-accessibility-mooc-for-educators-4">from 18 April to 8 May 2016</a>.
         The course is currently not scheduled to be repeated.
-      </li>
-      <li>
-        <a href="https://www.udacity.com/course/web-accessibility--ud891">Web Accessibility</a>
-        is a two-week <abbr>MOOC</abbr> by Google on Udacity. It is listed as an advanced self-paced course.
       </li>
       <li>
         <a href="https://www.canvas.net/browse/empirestate/empirestate-buffalostate/courses/accessibility-designing-teaching">Accessibility: Designing and Teaching Courses for All Learners</a>
@@ -157,11 +160,11 @@
       <li>
         <a href="https://teamtreehouse.com/library/web-accessibility-compliance">Web Accessibility Compliance</a>
         by Aisha Blake is a course hosted on Treehouse.
-        It is described as a <q>24-minute Development Tools Course</q>.
+        It is described as a <q>124-minute Development Tools Course</q>.
         (Access to Treehouse requires a monthly subscription.)
       </li>
       <li>
-        <a href="https://webdesign.tutsplus.com/courses/a-beginners-guide-to-web-accessibility">A Beginner&#39;s Guide to Web Accessibility</a>
+        <a href="https://webdesign.tutsplus.com/courses/a-beginners-guide-to-web-accessibility">A Beginner's Guide to Web Accessibility</a>
         by John Hartley is a course hosted on Tuts+. It contains 23 lessons.
       </li>
     </ul>
@@ -174,9 +177,10 @@
         <!-- "designed and facilitated by University of Montana’s Aaron Page and Marlene Zentz" https://moodle.com/2017/07/06/accessibility-mooc/ -->
       </li>
       <li>
-        <a href="https://de.ryerson.ca/wa/business/">Digital Accessibility as a Business Practice</a>
+        <a href="https://www.canvas.net/browse/ryersonu/courses/digital-accessibility">Digital Accessibility as a Business Practice</a>
+        <!--older URL:<a href="https://de.ryerson.ca/wa/business/">Digital Accessibility as a Business Practice</a>-->
         is three-week course by Ryerson University. 
-        The next week starts on 5 February 2018.
+        The latest started on 5 February 2018 and ended on 26 February 2018.
       </li>
       <li>
         <a href="http://www.coursesites.com/s/_IDDITMOOCAP">Intellectual Disability and Inclusion</a>
